[gd_scene load_steps=13 format=2]

[ext_resource path="res://raw_assets/3D/equipment/spikegun.obj" type="ArrayMesh" id=1]
[ext_resource path="res://src/Gameplay/Weapon.gd" type="Script" id=2]
[ext_resource path="res://raw_assets/2D/effects/spikegun_particle.png" type="Texture" id=3]
[ext_resource path="res://GR_assets/Weapons/SpikeGun/SpikeGunProjectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://raw_assets/audio/transfusion_gun3.wav" type="AudioStream" id=5]
[ext_resource path="res://GR_assets/Weapons/SpikeGun/SpikeGunProjectileBuffed.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.25, 0.550026 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
direction = Vector3( 0, 0, 1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
angle = 360.0
angle_random = 1.0
scale = 1.5
scale_curve = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )
emission_enabled = true
emission = Color( 0.996078, 0.2, 0.2, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )

[node name="SpikeGun" type="RigidBody"]
collision_layer = 4
mode = 3
script = ExtResource( 2 )
damage = 75.0
fire_rate = 0.001
recoil = Vector2( 3, 0 )
muzzle_velocity = 250.0
projectiles_per_shot = 1
audio_one_shot = true
projectile = ExtResource( 4 )
buffed_projectile = ExtResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.768856, 0, 0, 0, 0.768856, 0, 0, 0, 0.768856, 0, -0.165913, 0 )
mesh = ExtResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.176739, 0.220613 )
shape = SubResource( 1 )

[node name="WeaponMuzzle" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.231871 )

[node name="Particles" type="Particles" parent="WeaponMuzzle"]
emitting = false
amount = 3
lifetime = 0.15
one_shot = true
explosiveness = 1.0
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="SfxTimer" type="Timer" parent="."]

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 6.0
